update : user sql server

--- a/ContactApi/appsettings.json
+++ b/ContactApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbString": "Server=(LocalDb)\\MSSQLLocalDB;Database=ContactsDb;Trusted_Connection=true"
+  }
 }
